--- a/MyApp/src/Styles.module.scss
+++ b/MyApp/src/Styles.module.scss
@@ -1,24 +1,25 @@
 .heading_anim {
     background: linear-gradient(
-        -50deg,
-        var(--white) 15%,
-        var(--dark) 20%,
-        var(--white) 40%,
-        var(--dark) 100%
+        -45deg,
+        var(--dark) 10%,
+        var(--white) 20%,
+        var(--dark-dark) 40%
     );
     -webkit-background-clip: text;
     background-clip: text;
     color: transparent;
     -webkit-text-fill-color: transparent;
     background-size: 200%;
-    background-position: -200%;
+    background-position: 10%;
+    text-shadow: 10px 5px 5px var(--gray);
 
     animation: textBackground 8s cubic-bezier(0.215, 0.61, 0.355, 1)
-        alternate-reverse 1s 1 forwards;
+    1 forwards;
 }
 
 @keyframes textBackground {
     100% {
-        background-position: 200%;
+        background-position: -200%;
+        text-shadow: -10px 5px 12px     var(--gray);
     }
 }
