--- a/MyApp/src/components/NavPortfolio/Main.module.scss
+++ b/MyApp/src/components/NavPortfolio/Main.module.scss
@@ -7,28 +7,6 @@
     --action-width-o: 75%;
     --width-transition: transform 0.5s, width 0.5s;
 }
-.flex {
-    display: flex;
-}
-.flexCen {
-    justify-content: center;
-    align-items: center;
-}
-.hei {
-    height: var(--glob-height);
-}
-
-.col {
-    flex-flow: column;
-}
-
-.jsCen {
-    justify-content: center;
-}
-
-.alCen {
-    align-items: center;
-}
 
 // =============================================
 
@@ -56,30 +34,34 @@
         top: 0;
         background: var(--secondary);
         transition: var(--width-transition);
-        padding: 3rem 0;
         height: var(--glob-height);
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        ul {
-            list-style-type: none;
-            li {
-                width: 90%;
-            }
-        }
+        padding: 4rem 0;
         width: 25%;
         min-width: 10rem;
 
-        a, button {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+
+        ul {
+            list-style-type: none;
+            width: 90%;
+        }
+
+        a,
+        button {
             border-bottom: solid var(--primary) 1px;
             text-decoration: none;
             padding: 0.5rem 1rem;
             display: block;
+            width: 100%;
             color: var(--gray-dark);
             transition: all 0.3s;
             text-align: left;
         }
-        a:hover {
+        a:hover,
+        button:hover {
             color: var(--orange);
             background-color: var(--primary);
         }
