--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -17,6 +17,7 @@
     --green: #28a745;
     --teal: #20c997;
     --cyan: #17a2b8;
+    --sky: #38BDF8;
     --dark-dark: #020202; // form color
     --white: #fff; // dark color buttons
     --gray: #6c757d; // dark  bg buttons
@@ -33,7 +34,7 @@
     --success: #28a745;
     --info: #17a2b8;
     --warning: #ffc107;
-    --danger: #dc3545;
+    --danger: #f00c23;
     
     --dark: #343a40;
     
@@ -65,7 +66,6 @@ html {
 
 /* Track */
 ::-webkit-scrollbar-track {
-    margin: 2rem;
     background-color: var(--gray-dark);
     box-shadow: inset 0 0 5px var(--gray);
     border-radius: 1rem;
