--- a/Client/src/App.scss
+++ b/Client/src/App.scss
@@ -5,6 +5,15 @@
     user-select: none;
 }
 
+// SCSS SYNTAX
+$base-color: #c6538c;
+
+$breakpoint-xs: 0;
+$breakpoint-sm: 576px;
+$breakpoint-md: 768px;
+$breakpoint-lg: 992px;
+$breakpoint-xl: 1200px;
+
 :root {
     --blue: #007bff;
     --indigo: #6610f2;
@@ -22,7 +31,7 @@
     --orange: #fd7e14; // light  bg buttons
     --light: #f8f9fa; // light  color buttons
     --light-gray: #97a0a8;
-    --gray-dark: #343a40; // dark  background
+    --gray-dark: #2f2f3c; // dark  background
     --primary: #7a8ea3; // light  background
     --secondary: #d1d4d5;
 
@@ -33,11 +42,6 @@
 
     --dark: #343a40;
 
-    --breakpoint-xs: 0;
-    --breakpoint-sm: 576px;
-    --breakpoint-md: 768px;
-    --breakpoint-lg: 992px;
-    --breakpoint-xl: 1200px;
     --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI",
         Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans",
         sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
@@ -56,9 +60,15 @@ html {
 
 /* width */
 ::-webkit-scrollbar {
-    width: 0.6rem;
+    width: 0;
 }
 
+
+@media (hover : hover) {
+    ::-webkit-scrollbar {
+    width: 0.6rem;
+}
+}
 /* Track */
 ::-webkit-scrollbar-track {
     background-color: var(--gray-dark);
@@ -79,3 +89,4 @@ html {
 ::-webkit-scrollbar-thumb:hover {
     background: var(--background_color_hover);
 }
+
