--- a/Client/src/components/Boards/TodoBoard/Todo.module.scss
+++ b/Client/src/components/Boards/TodoBoard/Todo.module.scss
@@ -1,45 +1,52 @@
 @import "../../Global.module.scss";
+@import "../../../App.scss";
 
 .workspace {
     .board {
         display: flex;
         justify-content: center;
-        min-height: 100dvh;
 
         .container {
-            width: 70%;
+            width: 80%;
             display: flex;
             flex-direction: column;
             padding: 1rem 0 0 0;
             gap: 1rem;
 
-            h2 {
+            h3 {
                 margin: 1rem 0;
                 font-size: 1.5rem;
             }
 
             .tables {
-                display: flex;
                 display: grid;
                 grid-template-columns: 1fr 1fr 1fr;
+                padding: 1rem 0;
                 gap: inherit;
-                // position: relative;
-                // min-height: 100dvh;
+
+                overflow-y: auto;
+                overflow-x: hidden;
+                max-height: 75vh;
+                align-content: start;
+
+                place-items: center;
+
+                container-type: inline-size;
 
                 .table,
                 .tableCreator {
                     border-radius: 0.5rem;
-                    width: 100%;
+                    width: 90%;
                     aspect-ratio: 1 / 0.6;
-
                     display: flex;
                     flex-direction: column;
-                    align-items: center;
+
+                    align-items: start;
 
                     background-position: center;
                     background-repeat: no-repeat;
                     background-size: cover;
-                    transition: opacity 0.5s;
+                    transition: all 1s, opacity 0.5s;
                     opacity: 0.6;
                     cursor: pointer;
                 }
@@ -52,9 +59,6 @@
                 .tableCreator {
                     gap: 1rem;
                     justify-content: center;
-                    transition: all 5s;
-                    position: relative;
-                    left: 0;
 
                     div {
                         width: 100%;
@@ -77,14 +81,37 @@
                             translate: -50% -50%;
                         }
                     }
+                    form {
+                        max-width: 100%;
+                        display: flex;
+                        flex-direction: column;
+                    }
                 }
                 .tableCreatorCenter {
-                    position: absolute;
+                    position: fixed;
+              
+                    height: max-content;
                     width: 50%;
-                    left: 50%;
-                    top: 50%;
+
                     opacity: 1;
                     translate: -50% -50%;
+                    background: var(--light);
+                }
+            }
+            @media only screen and (max-width: $breakpoint-xl) {
+                .tables {
+                    grid-template-columns: 1fr 1fr;
+                    .tableCreatorCenter {
+                        width: 70%;
+                    }
+                }
+            }
+            @media only screen and (max-width: $breakpoint-sm) {
+                .tables {
+                    grid-template-columns: 1fr;
+                    .tableCreatorCenter {
+                        width: 100%;
+                    }
                 }
             }
         }
