--- a/Client/src/components/Boards/TodoBoard/Todo.module.scss
+++ b/Client/src/components/Boards/TodoBoard/Todo.module.scss
@@ -12,6 +12,7 @@
             flex-direction: column;
             padding: 1rem 0 0 0;
             gap: 1rem;
+            position: relative;
 
             h3 {
                 margin: 1rem 0;
@@ -31,8 +32,9 @@
 
                 place-items: center;
 
-                container-type: inline-size;
 
+                // container-type: inline-size;
+                position: relative;
                 .table,
                 .tableCreator {
                     border-radius: 0.5rem;
@@ -64,7 +66,10 @@
                         width: 100%;
                         height: 100%;
                         border-radius: inherit;
-                        position: relative;
+                        display: grid;
+                        place-items: center;
+
+                        // position: relative;
 
                         p {
                             padding: 0.3em 0.5em;
@@ -75,10 +80,8 @@
                             fill: calc(color);
                             width: 40%;
                             height: 40%;
-                            position: absolute;
-                            top: 50%;
-                            left: 50%;
-                            translate: -50% -50%;
+                            
+                            translate: 0 -50% ;
                         }
                     }
                     form {
@@ -89,10 +92,11 @@
                 }
                 .tableCreatorCenter {
                     position: fixed;
-              
-                    height: max-content;
-                    width: 50%;
 
+                    height: max-content;
+                    // width: 50%;
+                    // top: 0;
+                    // left: 0;
                     opacity: 1;
                     translate: -50% -50%;
                     background: var(--light);
